Add nixpacks configuration for PHP and Node.js setup
- Introduced a new nixpacks.toml file to define the setup phases.
- Specified PHP 8.2 and essential extensions (bcmath, intl, zip).
- Included Node.js and Yarn for asset management.
- Added composer command for optimized installation without development dependencies.

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-bcmath": "*",  
+        "ext-zip": "*",       
+        "ext-intl": "*",       
+        "ext-curl": "*", 
+        "ext-gd": "*",   
+        "ext-dom": "*",    
+        "ext-mbstring": "*",
+        "ext-openssl": "*",
+        "ext-pdo": "*",
         "aymanalhattami/filament-slim-scrollbar": "^2.1",
         "bezhansalleh/filament-shield": "^3.3",
         "eightynine/filament-advanced-widgets": "^3.0",
