--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,3 +1,9 @@
 [phases.setup]
-nixPkgs = ['php82', 'php82Extensions.bcmath', 'php82Extensions.intl', 'php82Extensions.zip', 'nodejs', 'yarn']  # Ajusta a tu versión PHP; incluye Node si usas assets.
+nixPkgs = ['php82', 'php82Extensions.bcmath', 'php82Extensions.intl', 'php82Extensions.zip', 'nodejs', 'yarn']
 cmds = ['composer install --optimize-autoloader --no-dev --no-interaction']
+
+[phases.build]
+cmds = ['npm install', 'npm run build']
+
+[variables]
+NIXPACKS_METADATA = "php,laravel"
