--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,11 @@
 [phases.setup]
-  nixPkgs = ['php82', 'nodejs_20', 'npm']  # Incluye PHP 8.2 y Node.js 20 con npm
-  aptPkgs = ['postgresql-client']  # Opcional: para comandos psql si usas PostgreSQL
+nixPkgs = ['php82', 'nodejs_20']  # Unifica Node.js 20 (elige la versión de tu package.json)
 
 [phases.build]
-  cmds = ['composer install --no-dev --optimize-autoloader', 'npm install', 'npm run build', 'php artisan optimize', 'php artisan config:cache', 'php artisan route:cache', 'php artisan view:cache', 'php artisan migrate --force']
+cmds = ['composer install --no-dev --optimize-autoloader', 'npm install', 'npm run build']  # Solo build essentials
+
+[phases.install]
+cmds = ['composer install --no-dev --optimize-autoloader']
 
 [start]
-  cmd = 'php artisan serve --host=0.0.0.0 --port=8080'  # Inicia el servidor Laravel
+cmd = 'php artisan serve --host=0.0.0.0 --port=8080'
