--- a/.npmrc
+++ b/.npmrc
@@ -1,8 +1,11 @@
-# NPM configuration for Docker environments
+# Configuración optimizada para entornos Docker/Railway
 cache=/tmp/.npm
 prefer-offline=true
-no-audit=true
+audit=false
 fund=false
 progress=false
-# Avoid EBUSY errors
 package-lock=false
+node-linker=hoisted
+legacy-peer-deps=true
+strict-peer-dependencies=false
+shamefully-hoist=true
