--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .DS_Store
 .env
 .env.backup
-.env.production
+.env.*.local
 .phpactor.json
 .phpunit.result.cache
 /.fleet
@@ -19,6 +19,16 @@
 /storage/*.key
 /storage/pail
 /vendor
+/bootstrap/cache/*.php
 Homestead.json
 Homestead.yaml
 Thumbs.db
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.vite
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
