--- a/railway.toml
+++ b/railway.toml
@@ -6,8 +6,7 @@ buildCommand = "./build-app.sh"
 startCommand = "php artisan serve --host=0.0.0.0 --port=$PORT"
 healthcheckPath = "/"
 healthcheckTimeout = 100
-restartPolicyType = "on-failure"
-numReplicas = 1
+restartPolicy = "always"
 
 [deploy.envs]
 PHP_INI_SCAN_DIR = "/conf.d:/usr/local/etc/php/conf.d"
